2000-01-08  Loren J. Rittle  <ljrittle@acm.org>

	* gcc.c-torture/execute/ieee/mzero2.x: Adjust statement of
	where a failure is expected.
	* gcc.c-torture/execute/ieee/rbug.x: Likewise.

2001-01-08  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old_deja/g++.pt/instantiate12.C: New test.

2001-01-08  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.benjamin/15309-1.C: Expect diagnostic at
	start of structs.
	* g++.old-deja/g++.benjamin/15309-2.C: Likewise.
	* g++.old-deja/g++.brendan/crash17.C: Likewise.
	* g++.old-deja/g++.brendan/crash29.C: Likewise.
	* g++.old-deja/g++.brendan/crash48.C: Likewise.
	* g++.old-deja/g++.brendan/ns1.C: Likewise.
	* g++.old-deja/g++.brendan/warnings1.C: Likewise.
	* g++.old-deja/g++.bugs/900205_04.C: Likewise.
	* g++.old-deja/g++.bugs/900514_03.C: Likewise.
	* g++.old-deja/g++.eh/spec6.C: Likewise.
	* g++.old-deja/g++.jason/crash3.C: Likewise.
	* g++.old-deja/g++.law/ctors11.C: Likewise.
	* g++.old-deja/g++.law/ctors17.C: Likewise.
	* g++.old-deja/g++.law/ctors5.C: Likewise.
	* g++.old-deja/g++.law/ctors9.C: Likewise.
	* g++.old-deja/g++.mike/ambig1.C: Likewise.
	* g++.old-deja/g++.mike/net22.C: Likewise.
	* g++.old-deja/g++.mike/p3538a.C: Likewise.
	* g++.old-deja/g++.mike/p3538b.C: Likewise.
	* g++.old-deja/g++.mike/virt3.C: Likewise.
	* g++.old-deja/g++.niklas/t128.C: Likewise.
	* g++.old-deja/g++.other/anon4.C: Likewise.
	* g++.old-deja/g++.other/using1.C: Likewise.
	* g++.old-deja/g++.other/warn3.C: Likewise.
	* g++.old-deja/g++.pt/t37.C: Likewise.
	* g++.old-deja/g++.robertl/eb69.C: Likewise.
	* g++.old-deja/g++.robertl/eb71.C: Likewise.

2001-01-08  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/lookup16.C: Remove XFAIL.

2001-01-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c-torture/execute/stdio-opt-3.c: New test.

2001-01-07  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/compile/20010107-1.c: New test.

2001-01-07  Joseph S. Myers  <jsm28@cam.ac.uk>
